# pwait

./: CMakeLists.txt  README  README.md  config.h.in  pwait.c  pwait.kdev4  pwait_poll.sh
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt  capabilities.c  netlink.c  pidfd.c  poll.c  ptrace.c  pwait.c  pwait.h
test/: CMakeLists.txt  test_pwait.sh
